--- a/client/src/scss/components/Main/main.scss
+++ b/client/src/scss/components/Main/main.scss
@@ -1,4 +1,11 @@
 .main {
     width: 100%;
     height: 100%;
+
+    .mainWrap {
+        padding-left: 23px;
+        padding-right: 6.5px;
+        padding-top: 18.5px;
+        padding-bottom: 19.8px;
+    }
 }
